--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,6 +12,7 @@
 <div class="col-lg-8 mx-auto p-3 py-md-5">
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+      <img src="{% static 'polls/logo.png' %}" height="20em">
       <span class="fs-4">Polls page</span>
     </a>
   </header>
