--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -1,5 +1,8 @@
 {% extends 'polls/base.html' %}
 
 {% block content %}
-<h1>Hello world!</h1>
+
+<h1>Welcome on Polls page</h1>
+<a href="{% url 'questions' %}">See our polls</a>
+
 {% endblock %}
