--- a/polls/templates/polls/question_form.html
+++ b/polls/templates/polls/question_form.html
@@ -1,10 +1,14 @@
 {% extends "polls/base.html" %}
+{% load i18n %}
 {% block content %}
 
 <h1>Add a new question:</h1>
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add">
+    <input type="submit" value="{% translate 'Save' context 'write to disk' %}">
 </form>
+
+Do you have money? <b>{% translate 'Save' context 'money' %}!</b>
+Do you have data? <b>{% translate 'Save' context 'write to disk' %}!</b>
 
 {% endblock %}
